Modification du nom

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <meta name="description" content="Add small description of yourslef.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
-  <meta name="keywords" content="Put your name, skills and some coding keywords" />
+  <meta name="keywords" content="BEAULIEU Eric | Ingénieur cybersécurité / réseaux / cloud" />
   <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>BEAULIEU Eric</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p> Ingénieur cybersécurité / réseaux / cloud</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
