--- a/index.html
+++ b/index.html
@@ -167,22 +167,23 @@
 
     <section class="Exp" id="Exp">
       <div class="row">
-        <h2>Expérience</h2>
-        <div class="work__boxes">
+        <h2>Expériences</h2>
+        <div class="Exp__boxes">
 
           <!-- Each div with the work__box class is a project. -->
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Lectra (3000 personnes), Cestas (33) - 34 filiales dans le monde - </h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                Depuis 2007 - Ingénieur réseau et sécurité
               </p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Définition et déploiement d’une architecture Cloud Azure sécurisée</li>
+                <li>Déploiement et maintien en condition opérationnelle des éléments réseaux et de sécurité</li>
+                <li>Mise en œuvre, gestion, maintenance, documentation et optimisation des réseaux de communication internes et externe</li>
+                <li>Audit et test d’intrusion interne</li>
+                <li>Gestion des projets technique en relation avec les sous-traitants et prestataires</li>
               </ul>
 
               <div class="work__links">
@@ -201,7 +202,7 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Messier-Bugatti groupe SAFRAN (1500 personnes), Vélizy (78)</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
                 eius.
