--- a/index.html
+++ b/index.html
@@ -168,17 +168,17 @@
     <section class="Exp" id="Exp">
       <div class="row">
         <h2>Expériences</h2>
-        <div class="Exp__boxes">
+        <div class="exp__boxes">
 
           <!-- Each div with the work__box class is a project. -->
 
-          <div class="work__box">
-            <div class="work__text">
+          <div class="exp__box">
+            <div class="exp__text">
               <h3>Lectra (3000 personnes), Cestas (33) - 34 filiales dans le monde - </h3>
               <p>
                 Depuis 2007 - Ingénieur réseau et sécurité
               </p>
-              <ul class="work__list">
+              <ul class="exp__list">
                 <li>Définition et déploiement d’une architecture Cloud Azure sécurisée</li>
                 <li>Déploiement et maintien en condition opérationnelle des éléments réseaux et de sécurité</li>
                 <li>Mise en œuvre, gestion, maintenance, documentation et optimisation des réseaux de communication internes et externe</li>
