--- a/index.html
+++ b/index.html
@@ -341,13 +341,13 @@
             <img src="./images/github.svg" class="footer__social-image" alt="Github">
           </a>
         </li>
-        <li class="footer__social-link-item">
+        <!--<li class="footer__social-link-item">
           <a href="https://codepen.io/nisar_hassan" title="Link to Codepen Profile">
             <img src="./images/codepen.svg" class="footer__social-image" alt="Codepen">
           </a>
-        </li>
+        </li>-->
         <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/eric--beaulieu/">
+          <a href=https://www.linkedin.com/in/eric-beaulieu/">
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
