--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <ul class="nav__items">
           <li class="nav__item"><a href="#work" class="nav__link">Compétences</a></li>
           <li class="nav__item"><a href="#Exp" class="nav__link">Expériences</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
+          <li class="nav__item"><a href="#clients" class="nav__link">Certifications</a></li>
+          <li class="nav__item"><a href="#clients" class="nav__link">Publications</a></li>
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
@@ -61,7 +62,7 @@
         </h1>
         <!-- Put a small paragraph about yourself -->
         <p> Ingénieur cybersécurité / réseaux / cloud</p>
-        <a href="#contact" class="btn btn--pink">Get in touch</a>
+        <a href="#contact" class="btn btn--pink">Me contacter</a>
       </div>
     </div>
   </header>
@@ -79,17 +80,16 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Système d'exploitation</h3>
               <p>
                 A free Open Source Portfolio for anyone to use for free.
               </p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Linux </li>
+                <li>Windows Server 2019 / 2016 / 2012 / 2006 / ...</li>
+                <li>Windows 11 / 10 / ...</li>
               </ul>
-
+              <!--
               <div class="work__links">
                 <a href="https://nisar.surge.sh" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
@@ -102,6 +102,7 @@
             <div class="work__image-box">
               <img src="./images/project-1.png" class="work__image" alt="Project 1" />
             </div>
+          -->
           </div>
 
           <div class="work__box">
