--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 A free Open Source Portfolio for anyone to use for free.
               </p>
               <ul class="work__list">
-                <li>Linux </li>
-                <li>Windows Server 2019 / 2016 / 2012 / 2006 / ...</li>
-                <li>Windows 11 / 10 / ...</li>
+                <li>Linux RedHat / Ubuntu / Debian</li>
+                <li>Windows Server 2019 / 2016 / 2012  </li>
+                <li>Windows 11 / 10 </li>
               </ul>
               <!--
               <div class="work__links">
@@ -97,9 +97,11 @@
                 <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
+
               </div>
+            -->
             </div>
-            <div class="work__image-box">
+            <!--<div class="work__image-box">
               <img src="./images/project-1.png" class="work__image" alt="Project 1" />
             </div>
           -->
@@ -107,16 +109,16 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Réseaux & Cloud</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
                 eius.
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li></li>
+                <li>Switch HP</li>
+                <li>Wifi Extreme Networks</li>
+                <li></li>
               </ul>
 
               <div class="work__links">
