--- a/index.html
+++ b/index.html
@@ -109,32 +109,33 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Réseaux & Cloud</h3>
+              <h3>Réseaux</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                Je deploie et administre différents type de réseau
               </p>
               <ul class="work__list">
-                <li></li>
+                <li>Reseau LAN / WAN / VPN</li>
                 <li>Switch HP</li>
                 <li>Wifi Extreme Networks</li>
-                <li></li>
+                <li>Notion de Cisco</li>
               </ul>
-
-              <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
-              </div>
-            </div>
-            <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Certificats x509 et PKI</h3>
+              <p>
+                Depuis plus de 10 ans, j'installe, génére et debug des certificats 
+              </p>
+              <ul class="work__list">
+                <li>Deploiement d'Autorité de Certificat interne</li>
+                <li>Gestion de certificat publique</li>
+                <li>Achat de certificats</li>
+                <li>Accompagnement à la génération, à l'installation, au debuggage des certificat x509</li>
+              </ul>
+            </div>
+          </div>
           <div class="work__box">
             <div class="work__text">
               <h3>Notificator</h3>
