--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
             <div class="work__text">
               <h3>Système d'exploitation</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
               </p>
               <ul class="work__list">
                 <li>Linux RedHat / Ubuntu / Debian</li>
@@ -110,9 +109,6 @@
           <div class="work__box">
             <div class="work__text">
               <h3>Réseaux</h3>
-              <p>
-                Je deploie et administre différents type de réseau
-              </p>
               <ul class="work__list">
                 <li>Reseau LAN / WAN / VPN</li>
                 <li>Switch HP</li>
@@ -125,14 +121,10 @@
           <div class="work__box">
             <div class="work__text">
               <h3>Certificats x509 et PKI</h3>
-              <p>
-                Depuis plus de 10 ans, j'installe, génére et debug des certificats 
-              </p>
               <ul class="work__list">
-                <li>Deploiement d'Autorité de Certificat interne</li>
-                <li>Gestion de certificat publique</li>
-                <li>Achat de certificats</li>
-                <li>Accompagnement à la génération, à l'installation, au debuggage des certificat x509</li>
+                <li>Deploiement d'Autorité de Certificat interne (Microsoft AD CS)</li>
+                <li>Gestion de certificat issue d'autorité public</li>
+                <li>Accompagnement des équipes interne pour la génération, l'installation, le debuggage des certificat x509</li>
               </ul>
             </div>
           </div>
