--- a/index.html
+++ b/index.html
@@ -113,7 +113,33 @@
                 <li>Reseau LAN / WAN / VPN</li>
                 <li>Switch HP</li>
                 <li>Wifi Extreme Networks</li>
-                <li>Notion de Cisco</li>
+                <li>Cisco (base)</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Services réseaux</h3>
+              <ul class="work__list">
+                <li>Serveurs DNS (resolveur / autorité / conditionnel)</li>
+                <li>Service DHCP & NTP</li>
+                <li>Serveur de messagerie (Postefix, Qmail, IBM Domino...)</li>
+                <li>Sereur Reverse Proxy (Citrix Netscaler / ADC, Azure Application Gateway, Azure Front Door)</li>
+                <li>Sereur web (Apache, Nginx, Microsoft IIS)</li>
+                <li>Sereur Proxy (Squid, Squiguard, Websense...)</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Pare-feux / Firewalls</h3>
+              <ul class="work__list">
+                <li>ChekcPoint</li>
+                <li>Azure Firewalls</li>
+                <li>Linux IPTables, ufw</li>
+                <li>Fortinet (base)</li>
               </ul>
             </div>
           </div>
