--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <div class="work__text">
               <h3>Réseaux</h3>
               <ul class="work__list">
-                <li>Reseau LAN / WAN / VPN</li>
-                <li>Switch HP</li>
+                <li>Reseau LAN / WAN / VPN (IPsec & SSL)</li>
+                <li>Switch HP (VLAN, STP, BGP, 802.1q)</li>
                 <li>Wifi Extreme Networks</li>
                 <li>Cisco (base)</li>
               </ul>
@@ -134,9 +134,9 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Pare-feux / Firewalls</h3>
+              <h3>Pare-feux - Firewalls</h3>
               <ul class="work__list">
-                <li>ChekcPoint</li>
+                <li>CheckPoint</li>
                 <li>Azure Firewalls</li>
                 <li>Linux IPTables, ufw</li>
                 <li>Fortinet (base)</li>
@@ -146,7 +146,7 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Certificats x509 et PKI</h3>
+              <h3>Certificats et PKI</h3>
               <ul class="work__list">
                 <li>Deploiement d'Autorité de Certificat interne (Microsoft AD CS)</li>
                 <li>Gestion de certificat issue d'autorité public</li>
@@ -290,7 +290,7 @@
         <h2>Clients</h2>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
+          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />bla
           <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
           <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
           <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
