--- a/index.html
+++ b/index.html
@@ -298,7 +298,29 @@
           <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
+      <div class="work__box">
+        <div class="work__text">
+          <h3>Certification</h3>
+          <ul class="work__list">
+            <li>AZ-104</li>
+            <li>AZ-500</li>
+            <li>AZ-700</li>
+            <li>Fortinet (base)</li>
+          </ul>
+        </div>
+      </div>
     </section>
+    <div class="work__box">
+      <div class="work__text">
+        <h3>Certification</h3>
+        <ul class="work__list">
+          <li>AZ-104</li>
+          <li>AZ-500</li>
+          <li>AZ-700</li>
+          <li>Fortinet (base)</li>
+        </ul>
+      </div>
+    </div>
 
     <!-- ***** About ***** -->
 
@@ -342,7 +364,7 @@
           me is via an email.
         </p>
         <!-- Replace the email with yours -->
-        <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        <a href="mailto:eric.beaulieu[-@-]gmail.com" class="btn">eric.beaulieu[-@-]gmail.com</a>
       </div>
     </div>
   </section>
