--- a/index.html
+++ b/index.html
@@ -88,22 +88,7 @@
                 <li>Windows Server 2019 / 2016 / 2012  </li>
                 <li>Windows 11 / 10 </li>
               </ul>
-              <!--
-              <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
-                </a>
-
-              </div>
-            -->
             </div>
-            <!--<div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
-            </div>
-          -->
           </div>
 
           <div class="work__box">
@@ -290,7 +275,7 @@
         <h2>Clients</h2>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />bla
+          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
           <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
           <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
           <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
@@ -298,29 +283,21 @@
           <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
         </div>
       </div>
-      <div class="work__box">
-        <div class="work__text">
-          <h3>Certification</h3>
-          <ul class="work__list">
-            <li>AZ-104</li>
-            <li>AZ-500</li>
-            <li>AZ-700</li>
-            <li>Fortinet (base)</li>
-          </ul>
+      <section class="work" id="work">
+        <div class="work__box">
+          <div class="work__text">
+            <h3>Certification</h3>
+            <ul class="work__list">
+              <li>AZ-104</li>
+              <li>AZ-500</li>
+              <li>AZ-700</li>
+              <li>Fortinet (base)</li>
+            </ul>
+          </div>
         </div>
-      </div>
+      </section>
     </section>
-    <div class="work__box">
-      <div class="work__text">
-        <h3>Certification</h3>
-        <ul class="work__list">
-          <li>AZ-104</li>
-          <li>AZ-500</li>
-          <li>AZ-700</li>
-          <li>Fortinet (base)</li>
-        </ul>
-      </div>
-    </div>
+
 
     <!-- ***** About ***** -->
 
