--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
     <section class="client" id="clients">
       <div class="row">
-        <h2>Clients</h2>
+        <h2>Certifications</h2>
         <div class="client__logos">
           <!-- Add logos of the clients or companies you'have worked with. -->
           <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
@@ -289,10 +289,16 @@
         <div class="work__text">
           <h3>Certification</h3>
           <ul class="work__list">
-            <li>AZ-104</li>
-            <li>AZ-500</li>
-            <li>AZ-700</li>
-            <li>Fortinet (base)</li>
+            <li>SC-100 - Cybersecurity Architect Expert - 12/2022 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/E123B4A68AA3A968?sharingId=10F2570FA8049AD5</li>
+            <li>AZ-500 - Azure Security Engineer Associate - 01/2024 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/1721301A4A0EA28A?sharingId=10F2570FA8049AD5</li>
+            <li>AZ-700 - Azure Network Engineer Associate - 06/2023 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/9FF0B8104D9C76EE?sharingId=10F2570FA8049AD5</li>
+            <li>SC-300 - Identity and Access Administrator Associate - 12/2022 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/8422BEF025FC92A5?sharingId=10F2570FA8049AD5</li>
+            <li>AZ-104 - Azure Administrator Associate - 06/2023 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/24AD45DECDC0AB25?sharingId=10F2570FA8049AD5</li>
+            <li>SC-900 - Security, Compliance, and Identity Fundamentals - 06/2022 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/D0167E8BAD251CEE?sharingId=10F2570FA8049AD5</li>
+            <li>AZ-900 - Azure Fundamentals - 06/2022 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/8B25DFBA2E597C7D?sharingId=10F2570FA8049AD5</li>
+            <li>Fortinet FCA - Fortinet Certified Associate Cybersecurity - 09/2024 - https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url</li>
+            <li>Fortinet FCF - Fortinet Certified Fundamentals Cybersecurity - 09/2024 - https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url</li>
+            <li>Aviatrix ACE - Multicloud Network Operations Specialty - 03/2024 - https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url</li>
           </ul>
         </div>
       </div>
