--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
             <li>Fortinet FCA - Fortinet Certified Associate Cybersecurity - 09/2024 - https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url</li>
             <li>Fortinet FCF - Fortinet Certified Fundamentals Cybersecurity - 09/2024 - https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url</li>
             <li>Aviatrix ACE - Multicloud Network Operations Specialty - 03/2024 - https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url</li>
+            <li>ISO 27001:2013 - Lead Auditor - 06/2017 </li>
           </ul>
         </div>
       </div>
