--- a/index.html
+++ b/index.html
@@ -139,6 +139,31 @@
               </ul>
             </div>
           </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Sécurité de la messagerie</h3>
+              <ul class="work__list">
+                <li>Enregistrement DNS : Dmarc, DKIM, SPF</li>
+                <li>Investigation phishing : analyse d'en tête, analyse statique et dynamique</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Microsoft Applied Skills</h3>
+              <ul class="work__list">
+                <li>Administrer Active Directory Domain Services</li>
+                <li>Déployer des conteneurs en utilisant Azure Kubernetes Service</li>
+                <li>Déployer et configurer Azure Monitor</li>
+                <li>Sécuriser les services et charges de travail Azure avec Microsoft Defender pour le cloud</li>
+                <li>Sécuriser le stockage pour Azure Files et Stockage Blob Azure</li>
+                <li>Configurer l’accès sécurisé à vos charges de travail en utilisant des réseaux Azure</li>
+              </ul>
+            </div>
+          </div>
+
           <div class="work__box">
             <div class="work__text">
               <h3>Notificator</h3>
