--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 Depuis 2007 - Ingénieur réseau et sécurité
               </p>
               <ul class="exp__list">
-                <li<a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text">Définition et déploiement d’une architecture Cloud Azure sécurisée</a></li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text">Définition et déploiement d’une architecture Cloud Azure sécurisée</a></li>
                 <li>Déploiement et maintien en condition opérationnelle des éléments réseaux et de sécurité</li>
                 <li>Mise en œuvre, gestion, maintenance, documentation et optimisation des réseaux de communication internes et externe</li>
                 <li>Audit et test d’intrusion interne</li>
