--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
             <div class="work__text">
               <h3>Microsoft Applied Skills</h3>
               <ul class="work__list">
-                <li>Administrer Active Directory Domain Services</li>
-                <li>Déployer des conteneurs en utilisant Azure Kubernetes Service</li>
-                <li>Déployer et configurer Azure Monitor</li>
-                <li>Sécuriser les services et charges de travail Azure avec Microsoft Defender pour le cloud</li>
-                <li>Sécuriser le stockage pour Azure Files et Stockage Blob Azure</li>
-                <li>Configurer l’accès sécurisé à vos charges de travail en utilisant des réseaux Azure</li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Administrer Active Directory Domain Services</a></li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=AC9AE7FB0C5660D9" target="_blank" class="link__text"></a>Déployer des conteneurs en utilisant Azure Kubernetes Service</li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Déployer et configurer Azure Monitor</li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Sécuriser les services et charges de travail Azure avec Microsoft Defender pour le cloud</li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Sécuriser le stockage pour Azure Files et Stockage Blob Azure</li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Configurer l’accès sécurisé à vos charges de travail en utilisant des réseaux Azure</li>
               </ul>
             </div>
           </div>
@@ -211,7 +211,7 @@
                 Depuis 2007 - Ingénieur réseau et sécurité
               </p>
               <ul class="exp__list">
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text">Définition et déploiement d’une architecture Cloud Azure sécurisée</a></li>
+                <li>Définition et déploiement d’une architecture Cloud Azure sécurisée</li>
                 <li>Déploiement et maintien en condition opérationnelle des éléments réseaux et de sécurité</li>
                 <li>Mise en œuvre, gestion, maintenance, documentation et optimisation des réseaux de communication internes et externe</li>
                 <li>Audit et test d’intrusion interne</li>
