--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
               <h3>Microsoft Applied Skills</h3>
               <ul class="work__list">
                 <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Administrer Active Directory Domain Services</a></li>
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=AC9AE7FB0C5660D9" target="_blank" class="link__text"></a>Déployer des conteneurs en utilisant Azure Kubernetes Service</li>
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Déployer et configurer Azure Monitor</li>
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Sécuriser les services et charges de travail Azure avec Microsoft Defender pour le cloud</li>
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Sécuriser le stockage pour Azure Files et Stockage Blob Azure</li>
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Configurer l’accès sécurisé à vos charges de travail en utilisant des réseaux Azure</li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=AC9AE7FB0C5660D9" target="_blank" class="link__text"></a>Déployer des conteneurs en utilisant Azure Kubernetes Service</a></li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Déployer et configurer Azure Monitor</a></li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Sécuriser les services et charges de travail Azure avec Microsoft Defender pour le cloud</a></li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Sécuriser le stockage pour Azure Files et Stockage Blob Azure</a></li>
+                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" target="_blank" class="link__text"></a>Configurer l’accès sécurisé à vos charges de travail en utilisant des réseaux Azure</a></li>
               </ul>
             </div>
           </div>
