--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <div class="work__text">
           <h3>Certification</h3>
           <ul class="work__list">
-            <li>SC-100 - Cybersecurity Architect Expert - 12/2022 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/E123B4A68AA3A968?sharingId=10F2570FA8049AD5</li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/E123B4A68AA3A968?sharingId=10F2570FA8049AD5">SC-100</a> - Cybersecurity Architect Expert - 12/2022</li>
             <li>AZ-500 - Azure Security Engineer Associate - 01/2024 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/1721301A4A0EA28A?sharingId=10F2570FA8049AD5</li>
             <li>AZ-700 - Azure Network Engineer Associate - 06/2023 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/9FF0B8104D9C76EE?sharingId=10F2570FA8049AD5</li>
             <li>SC-300 - Identity and Access Administrator Associate - 12/2022 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/8422BEF025FC92A5?sharingId=10F2570FA8049AD5</li>
