--- a/index.html
+++ b/index.html
@@ -315,15 +315,15 @@
           <h3>Certification</h3>
           <ul class="work__list">
             <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/E123B4A68AA3A968?sharingId=10F2570FA8049AD5">SC-100</a> - Cybersecurity Architect Expert - 12/2022</li>
-            <li>AZ-500 - Azure Security Engineer Associate - 01/2024 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/1721301A4A0EA28A?sharingId=10F2570FA8049AD5</li>
-            <li>AZ-700 - Azure Network Engineer Associate - 06/2023 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/9FF0B8104D9C76EE?sharingId=10F2570FA8049AD5</li>
-            <li>SC-300 - Identity and Access Administrator Associate - 12/2022 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/8422BEF025FC92A5?sharingId=10F2570FA8049AD5</li>
-            <li>AZ-104 - Azure Administrator Associate - 06/2023 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/24AD45DECDC0AB25?sharingId=10F2570FA8049AD5</li>
-            <li>SC-900 - Security, Compliance, and Identity Fundamentals - 06/2022 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/D0167E8BAD251CEE?sharingId=10F2570FA8049AD5</li>
-            <li>AZ-900 - Azure Fundamentals - 06/2022 - https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/8B25DFBA2E597C7D?sharingId=10F2570FA8049AD5</li>
-            <li>Fortinet FCA - Fortinet Certified Associate Cybersecurity - 09/2024 - https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url</li>
-            <li>Fortinet FCF - Fortinet Certified Fundamentals Cybersecurity - 09/2024 - https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url</li>
-            <li>Aviatrix ACE - Multicloud Network Operations Specialty - 03/2024 - https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url</li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/1721301A4A0EA28A?sharingId=10F2570FA8049AD5">AZ-500</a> - Azure Security Engineer Associate - 01/2024</li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/9FF0B8104D9C76EE?sharingId=10F2570FA8049AD5">AZ-700</a> - Azure Network Engineer Associate - 06/2023 https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/9FF0B8104D9C76EE?sharingId=10F2570FA8049AD5</li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/8422BEF025FC92A5?sharingId=10F2570FA8049AD5">SC-300</a> - Identity and Access Administrator Associate - 12/2022</li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/24AD45DECDC0AB25?sharingId=10F2570FA8049AD5">AZ-104</a> - Azure Administrator Associate - 06/2023</li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/D0167E8BAD251CEE?sharingId=10F2570FA8049AD5">SC-900</a> - Security, Compliance, and Identity Fundamentals - 06/2022</li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/en-us/BeaulieuEric-4815/8B25DFBA2E597C7D?sharingId=10F2570FA8049AD5">AZ-900</a> - Azure Fundamentals - 06/2022 </li>
+            <li><a href="https://www.credly.com/badges/df1e3bf1-ee02-4e4e-912d-cd5626301b13/public_url">Fortinet FCA</a> - Fortinet Certified Associate Cybersecurity - 09/2024</li>
+            <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">Fortinet FCF</a> - Fortinet Certified Fundamentals Cybersecurity - 09/2024 - </li>
+            <li><a href="https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url">Aviatrix ACE</a> - Multicloud Network Operations Specialty - 03/2024 </li>
             <li>ISO 27001:2013 - Lead Auditor - 06/2017 </li>
           </ul>
         </div>
