--- a/index.html
+++ b/index.html
@@ -236,14 +236,15 @@
             <div class="work__text">
               <h3>Messier-Bugatti groupe SAFRAN (1500 personnes), Vélizy (78)</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                Consultant sécurité INTRINsec
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Projet de prise en charge de l'infogérance sécurité – méthodologie ITIL</li>
+                <li>Rédaction de documentation sécurité</li>
+                <li>Veille technologique et sécurité</li>
+                <li>Définition de politiques de sécurité Système (Windows, Novell, Domino, Oracle, antivirus)</li>
+                <li>Audit et test d’intrusion sécurité</li>
+                <li>Assistance à maîtrise d'ouvrage</li>
               </ul>
 
               <div class="work__links">
@@ -262,16 +263,17 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
+              <h3>2002 – 2003 - INTRINsec groupe Neurones (1300 personnes), Nanterre (92)</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                Expert sécurité INTRINsec
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Veille technologique et sécurité</li>
+                <li>Audit et déploiement d’architectures sécurisées (serveur de messagerie / pare-feu / Internet / proxy / antivirus)</li>
+                <li>Audit et intégration d'architecture antivirale</li>
+                <li>Infogérance de la sécurité (support et assistance clients)</li>
+                <li>Administration système et réseau</li>
+
               </ul>
 
               <div class="work__links">
