--- a/index.html
+++ b/index.html
@@ -226,8 +226,9 @@
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
+            -->
             </div>
-            <div class="work__image-box">
+            <!-- <div class="work__image-box">
               <img src="./images/project-1.png" class="work__image" alt="Project 1" />
             </div>
           </div>
@@ -275,7 +276,7 @@
                 <li>Administration système et réseau</li>
 
               </ul>
-
+<!-- 
               <div class="work__links">
                 <a href="#" class="link__text">
                   Visit Site <span>&rarr;</span>
@@ -284,10 +285,13 @@
                   <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
+            -->
             </div>
+<!--            
             <div class="work__image-box">
               <img src="./images/project-3.png" class="work__image" alt="Project 3" />
             </div>
+          -->
           </div>
         </div>
       </div>
