--- a/index.html
+++ b/index.html
@@ -152,20 +152,6 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Microsoft Applied Skills</h3>
-              <ul class="work__list">
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" >Administrer Active Directory Domain Services</a></li>
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/AC9AE7FB0C5660D9?sharingId=10F2570FA8049AD5" >Déployer des conteneurs en utilisant Azure Kubernetes Service</a></li>
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/C6EEB1B907555EEA?sharingId=10F2570FA8049AD5" >Déployer et configurer Azure Monitor</a></li>
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/64BCD63D74B65FB8?sharingId=10F2570FA8049AD5" >Sécuriser les services et charges de travail Azure avec Microsoft Defender pour le cloud</a></li>
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3312F7649A055A0D?sharingId=10F2570FA8049AD5" >Sécuriser le stockage pour Azure Files et Stockage Blob Azure</a></li>
-                <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/ADA39C346A3E567A?sharingId=10F2570FA8049AD5" >Configurer l’accès sécurisé à vos charges de travail en utilisant des réseaux Azure</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="work__box">
-            <div class="work__text">
               <h3>Notificator</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
@@ -331,6 +317,22 @@
             <li><a href="https://www.credly.com/badges/ec18ed0b-a029-47aa-97db-ecc57a380f19/public_url">Fortinet FCF</a> - Fortinet Certified Fundamentals Cybersecurity - 09/2024 - </li>
             <li><a href="https://www.credly.com/badges/a3e792c4-cd74-4138-8fbc-f3ca8fe6a311/public_url">Aviatrix ACE</a> - Multicloud Network Operations Specialty - 03/2024 </li>
             <li>ISO 27001:2013 - Lead Auditor - 06/2017 </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="work" id="work">
+      <div class="work__box">
+        <div class="work__text">
+          <h3>Certification</h3>
+          <ul class="work__list">
+            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" >Administrer Active Directory Domain Services</a></li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/AC9AE7FB0C5660D9?sharingId=10F2570FA8049AD5" >Déployer des conteneurs en utilisant Azure Kubernetes Service</a></li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/C6EEB1B907555EEA?sharingId=10F2570FA8049AD5" >Déployer et configurer Azure Monitor</a></li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/64BCD63D74B65FB8?sharingId=10F2570FA8049AD5" >Sécuriser les services et charges de travail Azure avec Microsoft Defender pour le cloud</a></li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3312F7649A055A0D?sharingId=10F2570FA8049AD5" >Sécuriser le stockage pour Azure Files et Stockage Blob Azure</a></li>
+            <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/ADA39C346A3E567A?sharingId=10F2570FA8049AD5" >Configurer l’accès sécurisé à vos charges de travail en utilisant des réseaux Azure</a></li>
           </ul>
         </div>
       </div>
