--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <section class="work" id="work">
       <div class="work__box">
         <div class="work__text">
-          <h3>Certification</h3>
+          <h3>Microsoft Applied Skills</h3>
           <ul class="work__list">
             <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/3C4AF7D8DB5A452D?sharingId=10F2570FA8049AD5" >Administrer Active Directory Domain Services</a></li>
             <li><a href="https://learn.microsoft.com/api/credentials/share/fr-fr/BeaulieuEric-4815/AC9AE7FB0C5660D9?sharingId=10F2570FA8049AD5" >Déployer des conteneurs en utilisant Azure Kubernetes Service</a></li>
