--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          Are you looking for a fast-performing and user-friendly website to
+          <!--Are you looking for a fast-performing and user-friendly website to
           represent your product or business? or looking for any kind of
           consultation? or want to ask questions? or have some advice for me
           or just want to say "Hi 👋" in any case feel free to Let me know. I
           will do my best to respond back. 😊 The quickest way to reach out to
-          me is via an email.
+          me is via an email.-->
         </p>
         <!-- Replace the email with yours -->
         <a href="mailto:eric.beaulieu[-@-]gmail.com" class="btn">eric.beaulieu[-@-]gmail.com</a>
