--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                 <li>Audit et test d’intrusion sécurité</li>
                 <li>Assistance à maîtrise d'ouvrage</li>
               </ul>
-
-          <div class="work__box">
+            </div>
+          <!--<div class="work__box">-->
             <div class="work__text">
               <h3>2002 – 2003 - INTRINsec groupe Neurones (1300 personnes), Nanterre (92)</h3>
               <p>
@@ -309,7 +309,7 @@
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/Eric.jpg" alt="" />
+            <img class="about__photo" src="./images/Eric.jpg" width="300" height="300"alt="" />
           </div>
         </div>
       </div>
