--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                 <li>Gestion des projets technique en relation avec les sous-traitants et prestataires</li>
               </ul>
             </div>
+          </div>
           <div class="work__box">
             <div class="work__text">
               <h3>Messier-Bugatti groupe SAFRAN (1500 personnes), Vélizy (78)</h3>
@@ -219,6 +220,7 @@
                 <li>Assistance à maîtrise d'ouvrage</li>
               </ul>
             </div>
+          </div>
           <div class="work__box">
             <div class="work__text">
               <h3>2002 – 2003 - INTRINsec groupe Neurones (1300 personnes), Nanterre (92)</h3>
