--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 <li>Sereur Reverse Proxy (Citrix Netscaler / ADC, Azure Application Gateway, Azure Front Door)</li>
                 <li>Sereur web (Apache, Nginx, Microsoft IIS)</li>
                 <li>Sereur Proxy (Squid, Squiguard, Websense...)</li>
+                <li>Sereur Acitve Directory / Radius</li>
               </ul>
             </div>
           </div>
@@ -152,16 +153,21 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
-              </p>
+              <h3>Technologies Cloud</h3>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Microsoft Azure</li>
+                <li>Automatisation : Ansible, Terraform</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="work__box">
+            <div class="work__text">
+              <h3>Virtualisation et conteneurisation</h3>
+              <ul class="work__list">
+                <li>Utilisateur de solution VMWare ESX, VirtualBox</li>
+                <li>Docker & Docker Swarm</li>
+                <li>Base de Kubernetes et KVM</li>
               </ul>
 
               <div class="work__links">
@@ -197,7 +203,7 @@
                 Depuis 2007 - Ingénieur réseau et sécurité
               </p>
               <ul class="exp__list">
-                <li>Définition et déploiement d’une architecture Cloud Azure sécurisée</li>
+                <li>Concevoir et déployer les infrastructures réseaux pour les salles serveurs et l'infrastructure cloud</li>
                 <li>Déploiement et maintien en condition opérationnelle des éléments réseaux et de sécurité</li>
                 <li>Mise en œuvre, gestion, maintenance, documentation et optimisation des réseaux de communication internes et externe</li>
                 <li>Audit et test d’intrusion interne</li>
@@ -216,6 +222,7 @@
                 <li>Rédaction de documentation sécurité</li>
                 <li>Veille technologique et sécurité</li>
                 <li>Définition de politiques de sécurité Système (Windows, Novell, Domino, Oracle, antivirus)</li>
+                <li>Déploiement d'outils de supervision</li>
                 <li>Audit et test d’intrusion sécurité</li>
                 <li>Assistance à maîtrise d'ouvrage</li>
               </ul>
