--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
               <ul class="work__list">
                 <li>Serveurs DNS (resolveur / autorité / conditionnel)</li>
                 <li>Service DHCP & NTP</li>
-                <li>Serveur de messagerie (Postefix, Qmail, IBM Domino...)</li>
+                <li>Serveur de messagerie (Postfix, Qmail, IBM Domino...)</li>
                 <li>Sereur Reverse Proxy (Citrix Netscaler / ADC, Azure Application Gateway, Azure Front Door)</li>
                 <li>Sereur web (Apache, Nginx, Microsoft IIS)</li>
                 <li>Sereur Proxy (Squid, Squiguard, Websense...)</li>
-                <li>Sereur Acitve Directory / Radius</li>
+                <li>Sereur Active Directory / Radius</li>
               </ul>
             </div>
           </div>
